app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: wil-playground
